Added favicon for all pages and extra email address

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 
 <!-- Template CSS -->
 <link rel="stylesheet" href="assets/css/style-starter.css">
+<link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 
 <!-- web fonts -->
 <link href="//fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
@@ -168,73 +169,78 @@
 
       <div class="w3l-footer-16-main py-5" style="background-color: #242464 !important">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 column">
-                    <div class="row">
-                        <div class="col-md-6 column">
-                            <h3>Quick Links</h3>
-                            <ul class="footer-gd-16">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="events.html">Events</a></li>
-                                <li><a href="career.html">Careers</a></li>
-                                <li><a href="support.html">How to Play</a></li>
-                                <li><a href="register.html">Download</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6 column mt-md-0 mt-4">
-                            <h3>Legal Information</h3>
-                            <ul class="footer-gd-16">
-                                <li><a href="terms.html">Terms of Use</a></li>
-                                <li><a href="privacy.html#privacy">Privacy Policy</a></li>
-                                <li><a href="privacy.html">Security Agreement</a></li>
-                            </ul>
-                        </div>
-                    </div>
+          <div class="row">
+            <div class="col-lg-6 column">
+              <div class="row">
+                <div class="col-md-6 column">
+                  <h3>Quick Links</h3>
+                  <ul class="footer-gd-16">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="career.html">Careers</a></li>
+                    <li><a href="support.html">How to Play</a></li>
+                    <li><a href="register.html">Download</a></li>
+                  </ul>
                 </div>
-                <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-                    <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
-                            style="height:25px" />
-                        <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
-                    </h3>
-
-                    <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for
-                        BOATS and
-                        ISLANDERS. The first multiplayer
-                        virtual reality platform for creators.
-                        We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
-                        each other and
-                        enjoy
-                        exclusive content and entertainment from different BOATS (creators) around the world.
-                        Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
-                        token for access.
-                    </p>
+                <div class="col-md-6 column mt-md-0 mt-4">
+                  <h3>Legal Information</h3>
+                  <ul class="footer-gd-16">
+                    <li><a href="terms.html">Terms of Use</a></li>
+                    <li><a href="privacy.html#privacy">Privacy Policy</a></li>
+                    <li><a href="privacy.html">Security Agreement</a></li>
+                  </ul>
                 </div>
+              </div>
             </div>
+            <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
+              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
+                  style="height:25px" />
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
+              </h3>
+
+              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for
+                BOATS and
+                ISLANDERS. The first multiplayer
+                virtual reality platform for creators.
+                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+                each other and
+                enjoy
+                exclusive content and entertainment from different BOATS (creators) around the world.
+                Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
+                token for access.
+              </p>
+            </div>
+          </div>
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
-            <div class="columns text-lg-left text-center">
-                <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
-                    rights
-                    reserved
-                </p>
-            </div>
-            <div class="columns-2 mt-lg-0 mt-3">
-                <ul class="social">
-                    <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
-                </ul>
-            </div>
+          <div class="columns text-lg-left text-center">
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
+              rights
+              reserved
+            </p>
+          </div>
+          <div class="columns-2 mt-lg-0 mt-3">
+            <ul class="social">
+              <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook"
+                    aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span
+                    class="fa fa-instagram" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span
+                    class="fa fa-twitter" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube"
+                    aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin"
+                    aria-hidden="true"></span></a></li>
+            </ul>
+          </div>
         </div>
-    </div>
-        </div>
+      </div>
+      </div>
       </div>
       </div>
       <!-- Modal -->
@@ -243,7 +249,8 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="p2w.html" class="btn btn-light theme-button" style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
+            <a href="p2w.html" class="btn btn-light theme-button"
+              style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
               Go To Event</a>
           </div>
         </div>
@@ -315,7 +322,7 @@
       });
     });
   </script>
-  
+
   <!--//MENU-JS-->
 
   <script src="assets/js/jquery.magnific-popup.min.js"></script>
@@ -323,39 +330,39 @@
     $(document).ready(function () {
       $('.popup-with-zoom-anim').magnificPopup({
         type: 'inline',
-  
+
         fixedContentPos: true,
         fixedBgPos: true,
-  
+
         overflowY: 'auto',
-  
+
         closeBtnInside: true,
         preloader: false,
-  
+
         midClick: true,
         removalDelay: 300,
         mainClass: 'my-mfp-zoom-in'
       });
-  
+
       $('.popup-with-move-anim').magnificPopup({
         type: 'inline',
-  
+
         fixedContentPos: false,
         fixedBgPos: true,
-  
+
         overflowY: 'auto',
-  
+
         closeBtnInside: true,
         preloader: false,
-  
+
         midClick: true,
         removalDelay: 300,
         mainClass: 'my-mfp-slide-bottom'
       });
     });
   </script>
-  
-  
+
+
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
   <script>
