--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy & Security Compliance Agreement - Boat Island</title>
-
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
 
