--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <title>Register P2W - BIVR</title>
 
     <!-- Template CSS -->
