--- a/success.html
+++ b/success.html
@@ -8,7 +8,7 @@
     <title>Payment Successful - Boat Island</title>
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
-
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap"
         rel="stylesheet">
