Fixed typo error

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>About Us - The Boat Island</title>
+<title>About Us - The BOAT ISLAND</title>
 
 <!-- Template CSS -->
 <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -16,7 +16,7 @@
   <header id="site-header" class="fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="https://bivr.io">
           <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
           <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
         </a>
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://bivr.io">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item @@about-active active">
               <a class="nav-link" href="about.html">About</a>
@@ -59,7 +59,7 @@
   <!-- about breadcrumbs -->
   <nav id="breadcrumbs" class="breadcrumbs">
     <div class="container page-wrapper">
-      <a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">About</span>
+      <a href="https://bivr.io">Home</a> » <span class="breadcrumb_last" aria-current="page">About</span>
     </div>
   </nav>
   <main>
@@ -74,12 +74,12 @@
               <img src="assets/images/about1.jpg" class="img-curve img-fluid" alt="" />
             </div>
             <div class="cwp4-text col-lg-6">
-              <h3>What Is Boat Island VR (BIVR)</h3>
-              <p> Boat Island VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
-                virtual reality platform for creators.
-                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
+              <h3>What Is BOAT ISLAND VR (BIVR)</h3>
+              <p> BOAT ISLAND VR (BIVR), is a metaverse community for Boats and Islanders. The first multiplayer
+                virtual reality platform for Creators.
+                We are building a meta and virtual space where Islanders (Fans) can visit, connect with each other and
                 enjoy
-                exclusive content and entertainment from different BOATS (creators) around the world.
+                exclusive content and entertainment from different Boats (Creators) around the world.
                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access.
               </p>
             </div>
@@ -94,7 +94,7 @@
           </div>
           <div class="cwp4-two row">
             <div class="cwp4-text col-lg-6">
-              <h3>Boat Island VR Features</h3>
+              <h3>BOAT ISLAND VR Features</h3>
               <ul class="cont-4">
                 <li><span class="fa fa-check"></span>Create and customize your own avatar</li>
                 <li><span class="fa fa-check"></span>Enjoy chess and other board games</li>
@@ -120,7 +120,7 @@
         <div class="container py-lg-5">
           <div class="middle-section text-center">
             <div class="header-section text-center mx-auto">
-              <h6 class="sub-title">Explore The Boat Island</h6>
+              <h6 class="sub-title">Explore The BOAT ISLAND</h6>
               <h3>Take a Tour Round the Island</h3>
             </div>
             <div class="history-info mt-5">
@@ -175,7 +175,7 @@
                 <div class="col-md-6 column">
                   <h3>Quick Links</h3>
                   <ul class="footer-gd-16">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://bivr.io">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="career.html">Careers</a></li>
@@ -199,14 +199,14 @@
                 <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
               </h3>
 
-              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for
-                BOATS and
-                ISLANDERS. The first multiplayer
-                virtual reality platform for creators.
-                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                Boats and
+                Islanders. The first multiplayer
+                virtual reality platform for Creators.
+                We are building a meta and virtual space where Islanders (Fans) can visit, connect with
                 each other and
                 enjoy
-                exclusive content and entertainment from different BOATS (creators) around the world.
+                exclusive content and entertainment from different Boats (Creators) around the world.
                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
                 token for access.
               </p>
@@ -215,7 +215,7 @@
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The BOAT ISLAND. All
               rights
               reserved
             </p>
