--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
-  <title>Events &amp; Contests - Boat Island</title>
+  <title>Events &amp; Contests - BOAT ISLAND</title>
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -20,11 +20,11 @@
   <header id="site-header" class="fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
-        <!-- <a class="navbar-brand" href="index.html">
+        <!-- <a class="navbar-brand" href="https://bivr.io">
                 <span class="fa fa-handshake-o"></span> Masterwork
             </a> -->
 
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="https://bivr.io">
           <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
           <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
         </a>
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://bivr.io">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item @@about-active">
               <a class="nav-link" href="about.html">About</a>
@@ -67,7 +67,7 @@
   <!-- contact breadcrumbs -->
   <nav id="breadcrumbs" class="breadcrumbs">
     <div class="container page-wrapper">
-      <a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">Events</span>
+      <a href="https://bivr.io">Home</a> » <span class="breadcrumb_last" aria-current="page">Events</span>
     </div>
   </nav>
   <!-- /contact breadcrumbs -->
@@ -135,7 +135,7 @@ have decided to give out prizes to a  lucky winner</p>
                         <div class="col-md-6 column">
                             <h3>Quick Links</h3>
                             <ul class="footer-gd-16">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="https://bivr.io">Home</a></li>
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="events.html">Events</a></li>
                                 <li><a href="career.html">Careers</a></li>
@@ -159,14 +159,14 @@ have decided to give out prizes to a  lucky winner</p>
                         <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
                     </h3>
 
-                    <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for
-                        BOATS and
-                        ISLANDERS. The first multiplayer
-                        virtual reality platform for creators.
-                        We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+                    <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                        Boats and
+                        Islanders. The first multiplayer
+                        virtual reality platform for Creators.
+                        We are building a meta and virtual space where Islanders (Fans) can visit, connect with
                         each other and
                         enjoy
-                        exclusive content and entertainment from different BOATS (creators) around the world.
+                        exclusive content and entertainment from different Boats (Creators) around the world.
                         Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
                         token for access.
                     </p>
@@ -175,7 +175,7 @@ have decided to give out prizes to a  lucky winner</p>
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
             <div class="columns text-lg-left text-center">
-                <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
+                <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The BOAT ISLAND. All
                     rights
                     reserved
                 </p>
