--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy & Security Compliance Agreement - Boat Island</title>
+    <title>Privacy Policy & Security Compliance Agreement - BOAT ISLAND</title>
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -20,7 +20,7 @@
     <header id="site-header" class="fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg stroke">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="https://bivr.io">
                     <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
                     <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
                 </a>
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="https://bivr.io">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item @@about-active">
                             <a class="nav-link" href="about.html">About</a>
@@ -64,7 +64,7 @@
     <!-- contact breadcrumbs -->
     <nav id="breadcrumbs" class="breadcrumbs">
         <div class="container page-wrapper">
-            <a href="index.html">Home</a> » <a href="#privacy" class="breadcrumb_last" aria-current="page">Privacy Policy </a> » <span class="breadcrumb_last" aria-current="page">Security
+            <a href="https://bivr.io">Home</a> » <a href="#privacy" class="breadcrumb_last" aria-current="page">Privacy Policy </a> » <span class="breadcrumb_last" aria-current="page">Security
                 Compliance Agreement</span>
         </div>
     </nav>
@@ -75,13 +75,13 @@
                 <div class="header-section text-center mx-auto py-lg-5">
                     <h6 class="sub-title">Privacy Policy & Security Compliance Agreement</h6>
                 </div>
-                <p class="py-2">At Boat Island, we are committed to protecting and securing the privacy of all our
+                <p class="py-2">At BOAT ISLAND, we are committed to protecting and securing the privacy of all our
                     website users
                     while ensuring they have the most amazing experience in the course of using our website. Our
                     Privacy Policy & Security Compliance Agreement is however designed to further explain the
                     manner to which we may handle the legally provided personal information of our website
                     users&OpenCurlyQuote;.</p>
-                <p class="py-2">The Management of Boat Island is taking adequate measures to ensure an excellent User
+                <p class="py-2">The Management of BOAT ISLAND is taking adequate measures to ensure an excellent User
                     experience on their website, however, it is pertinent to note that this Privacy Policy & Security
                     Compliance Agreement will be updated reviewed from time to time. To that effect, it is the sole
                     responsibility of every user to review this Privacy Policy & Security Compliance Agreement
@@ -92,32 +92,32 @@
                 <h6 class="sub-title py-3">1. Information We Collect from BOAT ISLAND Users</h6>
                 <p class="py-2">As an online platform specially designed to manage the Information of users, E-commerce
                     of
-                    individuals and Businesses, all Users of Boat Island will be required to provide the following
+                    individuals and Businesses, all Users of BOAT ISLAND will be required to provide the following
                     personal information where necessary but not limited to; Identity Information, Contact
                     Information, BVN/Bank account/Debit card information, information of all transactions made on
                     the mobile app/website, Information on the app usage, Location information, Marketing
                     information on how users got to know about us, Web cookies, etc. In respect of this Data
-                    Collection, all User/s of Boat Island are strongly required to provide very correct information as
+                    Collection, all User/s of BOAT ISLAND are strongly required to provide very correct information as
                     any wrong information provided would amount to a breach of this agreement.</p>
-                <p class="py-2">Since Data Collection is a compulsory part of Boat Island website/app, you must be aware
+                <p class="py-2">Since Data Collection is a compulsory part of BOAT ISLAND website/app, you must be aware
                     that
                     certain data can be collected and processed while you are using our website. Such approved
                     methods of data collection are as follows:</p>
                 <ol class="mx-5 py-3">
                     <li style="list-style-type:lower-roman">Registration and Completion of Purchase/Payment: This comes
                         to play when Users formally
-                        indicate their interest to use Boat Island website/App by filling out the provided form with
+                        indicate their interest to use BOAT ISLAND website/App by filling out the provided form with
                         their
                         Identity details, Contact details, Bank details and all other details mentioned above.</li>
                     <li style="list-style-type:lower-roman">Traffic data, Location data, etc: These details are
                         automatically gotten through any user’s
-                        visit to Boat Island website or through the use of any resource tools while on our website.</li>
-                    <li style="list-style-type:lower-roman">Any sort of Communication on Boat Island Website: All forms
+                        visit to BOAT ISLAND website or through the use of any resource tools while on our website.</li>
+                    <li style="list-style-type:lower-roman">Any sort of Communication on BOAT ISLAND Website: All forms
                         of communication on Boat
                         Island website would enable us to collect information of the User(s).</li>
                 </ol>
                 <h6 class="sub-title py-3">2. The Use of Cookies</h6>
-                <p class="py-2">For quality assurance purposes on Boat Island website, its Management will from time to
+                <p class="py-2">For quality assurance purposes on BOAT ISLAND website, its Management will from time to
                     time
                     gather information about Users&OpenCurlyQuote; computer in a bid to provide appropriate services or
                     products to
@@ -135,28 +135,28 @@
                 <p class="py-2">However, every device has the option to either accept or decline cookies through the
                     “cookie
                     button”. The web browser options include an "enable" button to enable cookies. It is important
-                    to note that declining cookies could limit users access to some services on Boat Island website.
+                    to note that declining cookies could limit users access to some services on BOAT ISLAND website.
                     Also note that we do not have control over our advertisers&OpenCurlyQuote; cookies if ever used.</p>
                 <p class="py-2">Most importantly, cookies are used to store Users&OpenCurlyQuote; login details and
                     remember all Users&OpenCurlyQuote;
                     settings.</p>
-                <h6 class="sub-title py-3">3. The Use of Boat Island Users&OpenCurlyQuote; Information</h6>
-                <p class="py-2">Since Boat Island collects information from Users to improve products and services, it
+                <h6 class="sub-title py-3">3. The Use of BOAT ISLAND Users&OpenCurlyQuote; Information</h6>
+                <p class="py-2">Since BOAT ISLAND collects information from Users to improve products and services, it
                     is
-                    important to take not of the circumstances where Boat Island may genuinely use your
+                    important to take not of the circumstances where BOAT ISLAND may genuinely use your
                     information as well as your rights to your information;</p>
                 <ol class="mx-5">
                     <li style="list-style-type:lower-roman">In the course of any transaction or commitment we make on a
                         contract basis.</li>
                     <li style="list-style-type:lower-roman">If at any time, information is requested from our
                         website/app regarding services or products
-                        offered, Boat Island might use your data.</li>
+                        offered, BOAT ISLAND might use your data.</li>
                     <li style="list-style-type:lower-roman">Based on your information with us, we can notify you of
                         changes and enhancements with
                         respect to certain product or service changes that could affect our service to you.</li>
-                    <li style="list-style-type:lower-roman">As a user/customer of Boat Island, you can be contacted on
+                    <li style="list-style-type:lower-roman">As a user/customer of BOAT ISLAND, you can be contacted on
                         the topic of certain goods or
-                        services based on a previous payment you made on Boat Island if we feel you might be
+                        services based on a previous payment you made on BOAT ISLAND if we feel you might be
                         interested in such services.</li>
                     <li style="list-style-type:lower-roman">Added use of your data may include permission for third
                         parties to use your data. However,
@@ -164,33 +164,33 @@
                         might be interested in. We or third parties can only contact you in regards to this information
                         if
                         consent has been provided for information collection.</li>
-                    <li style="list-style-type:lower-roman">Boat Island will never share your data with a third party
+                    <li style="list-style-type:lower-roman">BOAT ISLAND will never share your data with a third party
                         except you have granted us this
                         permission. In other words, these communications with third parties are only offered for
                         information you gave consent to and no other unrelated information.</li>
-                    <li style="list-style-type:lower-roman">Whatever data that you do not want Boat Island or third
+                    <li style="list-style-type:lower-roman">Whatever data that you do not want BOAT ISLAND or third
                         parties to use can be withheld by
                         us pending when you give consent as a registered User.</li>
-                    <li style="list-style-type:lower-roman">In a bid to ensure Users’ privacy, Boat Island will never
+                    <li style="list-style-type:lower-roman">In a bid to ensure Users’ privacy, BOAT ISLAND will never
                         share Personal data which could be
                         used to disclose Users’ identity to third parties except we are under a legal obligation to do
                         so.</li>
-                    <li style="list-style-type:lower-roman">Boat Island will take appropriate measures to ensure that
+                    <li style="list-style-type:lower-roman">BOAT ISLAND will take appropriate measures to ensure that
                         Users receive the very best service
                         from us at all times and to achieve that, our officers, agents, or employees will likely contact
                         you following your registration on our website/app.</li>
                 </ol>
                 <h6 class="sub-title py-3">4. Storing our Users’ Personal Data</h6>
                 <ol class="mx-5">
-                    <li style="list-style-type:lower-roman">Boat Island will take all reasonable processes to ensure
+                    <li style="list-style-type:lower-roman">BOAT ISLAND will take all reasonable processes to ensure
                         your data is secure and in agreement
                         with our Privacy Policy as outlined herein.</li>
-                    <li style="list-style-type:lower-roman">Boat Island makes use of very secured servers to ensure
+                    <li style="list-style-type:lower-roman">BOAT ISLAND makes use of very secured servers to ensure
                         proper data storage for purposes of
                         privacy and security. To that effect, information on transactions are usually kept encrypted for
                         safety measures.</li>
                     <li style="list-style-type:lower-roman">While we take necessary step to provide the best security
-                        available, every Boat Island
+                        available, every BOAT ISLAND
                         User/Customer must however note that data transmission on the internet can never be
                         ultimately secure. To that effect, we do not and cannot guarantee the security of information
                         collected or transmitted electronically. Due to this inability to guarantee safety, you should
@@ -204,13 +204,13 @@
                     the
                     following circumstances:</p>
                 <ol class="mx-5">
-                    <li style="list-style-type:lower-roman">If at any point, Boat Island decides to sell all or a
+                    <li style="list-style-type:lower-roman">If at any point, BOAT ISLAND decides to sell all or a
                         section of its business or assets to a third
                         party</li>
                     <li style="list-style-type:lower-roman">If there is a dire need to offer same to any member of our
                         company, such as subsidiaries,
                         holding companies and their subsidiaries.</li>
-                    <li style="list-style-type:lower-roman">If Boat Island is ever legally required or legally obligated
+                    <li style="list-style-type:lower-roman">If BOAT ISLAND is ever legally required or legally obligated
                         to share your information.</li>
                     <li style="list-style-type:lower-roman">If a disclosure of your personal information will result to
                         fraud protection.</li>
@@ -230,7 +230,7 @@
                     that you check their terms at all times as we do not accept liability or responsibility for their
                     privacy policies, based on our lack of control over these third party links.</p>
                 <h6 class="py-3 sub-title">9. Contact Information</h6>
-                <p class="py-2">The management and staff of Boat Island Virtual Reality are open to any queries,
+                <p class="py-2">The management and staff of BOAT ISLAND Virtual Reality are open to any queries,
                     comments or
                     requests you may have regarding this Privacy Policy & Security Compliance Agreement. Kindly
                     email us at <a href="mailto:support@bivr.io">support@bivr.io</a></p>
@@ -249,7 +249,7 @@
                                 <div class="col-md-6 column">
                                     <h3>Quick Links</h3>
                                     <ul class="footer-gd-16">
-                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="https://bivr.io">Home</a></li>
                                         <li><a href="about.html">About Us</a></li>
                                         <li><a href="events.html">Events</a></li>
                                         <li><a href="career.html">Careers</a></li>
@@ -273,14 +273,14 @@
                                 <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
                             </h3>
 
-                            <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for
-                                BOATS and
-                                ISLANDERS. The first multiplayer
-                                virtual reality platform for creators.
-                                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                                Boats and
+                                Islanders. The first multiplayer
+                                virtual reality platform for Creators.
+                                We are building a meta and virtual space where Islanders (Fans) can visit, connect with
                                 each other and
                                 enjoy
-                                exclusive content and entertainment from different BOATS (creators) around the world.
+                                exclusive content and entertainment from different Boats (Creators) around the world.
                                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
                                 token for access.
                             </p>
@@ -289,7 +289,7 @@
                 </div>
                 <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
                     <div class="columns text-lg-left text-center">
-                        <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
+                        <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The BOAT ISLAND. All
                             rights
                             reserved
                         </p>
