--- a/careers.html
+++ b/careers.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
-    <title>Careers - Boat Island</title>
+    <title>Careers - BOAT ISLAND</title>
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
     <!-- web fonts -->
@@ -21,7 +21,7 @@
         <header id="site-header" class="fixed-top">
             <div class="container">
                 <nav class="navbar navbar-expand-lg stroke">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="https://bivr.io">
                         <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
                         <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
                     </a>
@@ -36,7 +36,7 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="https://bivr.io">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item @@about-active">
                                 <a class="nav-link" href="about.html">About</a>
@@ -71,7 +71,7 @@
                             <div class="col-lg-6 content-left">
                                 <h3>Be Part of the New Wave</h3>
                                 <h4 style="color: #ab07d4">Let's Build Something Revolutionary</h4>
-                                <p class="mt-3 mb-lg-5 mb-4">Build your Career, Build your Future on the <br>Boat Island
+                                <p class="mt-3 mb-lg-5 mb-4">Build your Career, Build your Future on the <br>BOAT ISLAND
                                     Workspace</p>
                                 <a href="#openings" class="btn btn-outline-primary theme-button" style="border-radius: 40px; 
           color: #fff; background: #ab07d4; border: none;">See All Openings</a>
@@ -249,7 +249,7 @@
                                 <div class="col-md-6 column">
                                     <h3>Quick Links</h3>
                                     <ul class="footer-gd-16">
-                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="https://bivr.io">Home</a></li>
                                         <li><a href="about.html">About Us</a></li>
                                         <li><a href="events.html">Events</a></li>
                                         <li><a href="career.html">Careers</a></li>
@@ -274,14 +274,14 @@
                                 <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
                             </h3>
 
-                            <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for
-                                BOATS and
-                                ISLANDERS. The first multiplayer
-                                virtual reality platform for creators.
-                                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                                Boats and
+                                Islanders. The first multiplayer
+                                virtual reality platform for Creators.
+                                We are building a meta and virtual space where Islanders (Fans) can visit, connect with
                                 each other and
                                 enjoy
-                                exclusive content and entertainment from different BOATS (creators) around the world.
+                                exclusive content and entertainment from different Boats (Creators) around the world.
                                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
                                 token for access.
                             </p>
@@ -290,7 +290,7 @@
                 </div>
                 <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
                     <div class="columns text-lg-left text-center">
-                        <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
+                        <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The BOAT ISLAND. All
                             rights
                             reserved
                         </p>
