--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
   <header id="site-header" class="fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="https://bivr.io">
           <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
           <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
         </a>
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://bivr.io">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item @@about-active">
               <a class="nav-link" href="about.html">About</a>
@@ -65,7 +65,7 @@
   <!-- contact breadcrumbs -->
   <nav id="breadcrumbs" class="breadcrumbs">
     <div class="container page-wrapper">
-      <a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">FAQ - Frequently Asked
+      <a href="https://bivr.io">Home</a> » <span class="breadcrumb_last" aria-current="page">FAQ - Frequently Asked
         Questions</span>
     </div>
   </nav>
@@ -99,19 +99,19 @@
                     <input type="checkbox" checked="">
                     <i></i>
                     <h2>Who is an Islander? </h2>
-                    <p>An Islander is a new member of Boat Island.</p>
+                    <p>An Islander is a new member of BOAT ISLAND.</p>
                   </li>
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>Who are BOATS?</h2>
-                    <p>BOATS are creators on BOAT ISLAND</p>
+                    <h2>Who are Boats?</h2>
+                    <p>Boats are Creators on BOAT ISLAND</p>
                   </li>
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
                     <h2>What are the benefits of subscribing and becoming a member? </h2>
-                    <p>As an Islander (member) you enjoy premium access to Boat Island's EXCLUSIVE CONTENTS, MERCHS,
+                    <p>As an Islander (member) you enjoy premium access to BOAT ISLAND's EXCLUSIVE CONTENTS, MERCHS,
                       PRIVATE EVENTS, EXCLUSIVE GIVEAWAYS & other EXCITING PACKAGES.</p>
                   </li>
                   <li>
@@ -135,7 +135,7 @@
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>How can I host an event on Boat Island metaverse?</h2>
+                    <h2>How can I host an event on BOAT ISLAND metaverse?</h2>
                     <p>By reaching out to us via email or on our socials.<br>
                       For more enquiries & partnerships, kindly send us an email:<br>
                       <a href='mailto:support@bivr.io'>support@bivr.io</a><br>
@@ -242,7 +242,7 @@
                 <div class="col-md-6 column">
                   <h3>Quick Links</h3>
                   <ul class="footer-gd-16">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://bivr.io">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="career.html">Careers</a></li>
@@ -266,14 +266,14 @@
                 <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
               </h3>
 
-              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for
-                BOATS and
-                ISLANDERS. The first multiplayer
-                virtual reality platform for creators.
-                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                Boats and
+                Islanders. The first multiplayer
+                virtual reality platform for Creators.
+                We are building a meta and virtual space where Islanders (Fans) can visit, connect with
                 each other and
                 enjoy
-                exclusive content and entertainment from different BOATS (creators) around the world.
+                exclusive content and entertainment from different Boats (Creators) around the world.
                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
                 token for access.
               </p>
@@ -282,7 +282,7 @@
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The BOAT ISLAND. All
               rights
               reserved
             </p>
